...
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.chatapp.view.authflow.SignupFragment"
        android:label=""
        tools:layout="@layout/fragment_signup" >
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginSignupOptionsFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.chatapp.view.authflow.LoginFragment"
        android:label="FragmentLogin"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFlowContainerFragment"
            app:destination="@id/homeFlowContainerFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
...
