<resources>
    <string name="app_name">ChatApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="Interests">Interests</string>
    <string name="chats">Chats</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="enter_message">Enter Message</string>
    <string name="rooms">Rooms</string>
    <string name="full_name">%1$s  %2$s</string>
    <string name="this_is_a_message">This is a Message</string>
    <string name="about_me">About Me</string>
    <string name="no_results">No Results</string>
    <string name="retry">Retry</string>
    <string name="users">Users</string>
    <string name="typingInfo">%1$s is typing...</string>
    <string name="typingInfoPlural">%1$s are typing...</string>
    <string name="success">Success</string>
    <string name="nothing_here">Nothing here</string>
    <string name="create_new_room">Create New Room</string>
    <string name="login_success_message">Logged in successfully.</string>
    <string name="room_name">Room Name</string>
    <string name="add_room">Add Room</string>
    <string name="delete">Delete</string>
    <string name="unsend">Unsend</string>
</resources>